yoshimi 1.5.1.1

2017-5-2 Will
* Fixed Gui anomally when loading states with Midi-learn.
  The way we fetch Gui updates needs improving greatly.
  Currently we use the VU timer and call across from synth.
* LV2 state now includes Midi-learn data.

2017-5-1 Will
* State load now correctly updates main window title.
* More float -> int range adustments
  especially Midi-learn limits and conversions.

2017-4-30 Will
* Improved float -> int conversions.
* BugFix: some of the new controls had the wrong limits.

2017-4-29 Will
* Corrected some Gui engine enable/colour anomalies.
  Needs more work to rationalise duplications.
* Enabled engine switches for Midi-learn.
* Enabled some controllers for Midi_learn.
  pan width
  bandwidth depth
  pitchwheel range
  portamento time
  portamento time stretch
  portamento threshold
  proportional rate
  proportional depth
* Updated limits
* Small adjustment to controllers window.

2017-4-28 Will
* Fixed dynamic tooltip margins at 3 for all FLTK 1.3.x.
  May reinstate the margin setting at a later date.
* Small change to crossfade example.

2017-4-23 Will
* Reverted Midi-learn Gui change again
  It was just moving the problem to any window that was open :(

2017-4-22 Will
* If State file has Midi-learn data it closes the window.
  This evades the issue rather than solving it :(
  However no other load source shows the problem.

2017-4-21 Will
* Reverted Midi-learn Gui change - caused other problems.

2017-4-20 Will
* Improved handling of Vectors in state load
* Loading large Midi-learn lists was overloading Gui
  so reduced Gui update rate.
* Misc image updates.

2017-4-18 Will
* Corrected AddSynth sound/noise display.
* Included AddSynthVoiceList in new controls method.
* Midi-learn data added to saved state file.

2017-4-17 Will
* Implemented Gui change can redraw *after* command set.
* Transferred AddSynthVoice to new control method.
* Updated docs.
* Transferred SubSynth to new control method.